# Free-Fire-Cheat-Panel

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp
src/gui/: GuiStyles.h
src/memory/: Memory.cpp  Memory.h  Offsets.h  Scanner.cpp  Scanner.h
src/security/: AntiCrack.h  Security.h  XorStr.h
